--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/animations.css" />
+
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/media.css" />
+
+    <script defer src="./scripts/index.js"></script>
 
     <title>Pokédex</title>
   </head>
   <body>
     <div class="wrapper">
       <main class="main_container">
-        <section class="cards_wrapper">
-          <div class="card__container">
+        <section class="cards_container">
+          <div class="card" data-pokemon-card-id="1">
             <header class="card__header">
               <div class="card__details">
                 <h1>
@@ -22,16 +34,16 @@
                   <span>#001</span>
                 </h1>
 
-                <mark>pro</mark>
+                <mark class="pokemon-type">Elétrico</mark>
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/dragonite.png" alt="Dragonite" />
+                <img src="./assets/images/pikachu.png" alt="Pikachu" />
               </div>
             </header>
 
             <section class="card__content">
-              <div>
+              <div class="status_container">
                 <h3>Status</h3>
 
                 <ul class="status__list">
@@ -43,7 +55,7 @@
                 </ul>
               </div>
 
-              <div>
+              <div class="skills_container">
                 <h3>Habilidades</h3>
 
                 <ul class="skills__list">
@@ -53,9 +65,262 @@
               </div>
             </section>
           </div>
+
+          <div class="card" data-pokemon-card-id="2">
+            <header class="card__header">
+              <div class="card__details">
+                <h1>
+                  <strong>Bulbasaur</strong>
+                  <span>#002</span>
+                </h1>
+
+                <mark class="pokemon-type">Grama</mark>
+              </div>
+
+              <div class="image_wrapper">
+                <img src="./assets/images/bulbasaur.png" alt="Bulbasaur" />
+              </div>
+            </header>
+
+            <section class="card__content">
+              <div class="status_container">
+                <h3>Status</h3>
+
+                <ul class="status__list">
+                  <li>HP: 300</li>
+                  <li>Ataque: 600</li>
+                  <li>Defesa: 500</li>
+                  <li>Velocidade: 200</li>
+                  <li>Total: 1600</li>
+                </ul>
+              </div>
+
+              <div class="skills_container">
+                <h3>Habilidades</h3>
+
+                <ul class="skills__list">
+                  <li>Ataque de terra</li>
+                  <li>Defesa extra</li>
+                </ul>
+              </div>
+            </section>
+          </div>
+
+          <div class="card" data-pokemon-card-id="3">
+            <header class="card__header">
+              <div class="card__details">
+                <h1>
+                  <strong>Charmander</strong>
+                  <span>#003</span>
+                </h1>
+
+                <mark class="pokemon-type">Fogo</mark>
+              </div>
+
+              <div class="image_wrapper">
+                <img src="./assets/images/charmander.png" alt="Charmander" />
+              </div>
+            </header>
+
+            <section class="card__content">
+              <div class="status_container">
+                <h3>Status</h3>
+
+                <ul class="status__list">
+                  <li>HP: 300</li>
+                  <li>Ataque: 600</li>
+                  <li>Defesa: 500</li>
+                  <li>Velocidade: 200</li>
+                  <li>Total: 1600</li>
+                </ul>
+              </div>
+
+              <div class="skills_container">
+                <h3>Habilidades</h3>
+
+                <ul class="skills__list">
+                  <li>Ataque de fogo</li>
+                  <li>Defesa extra contra fogo</li>
+                </ul>
+              </div>
+            </section>
+          </div>
+
+          <div class="card" data-pokemon-card-id="4">
+            <header class="card__header">
+              <div class="card__details">
+                <h1>
+                  <strong>Gyarados</strong>
+                  <span>#004</span>
+                </h1>
+
+                <mark class="pokemon-type">Água</mark>
+              </div>
+
+              <div class="image_wrapper">
+                <img src="./assets/images/gyarados.png" alt="Gyarados" />
+              </div>
+            </header>
+
+            <section class="card__content">
+              <div class="status_container">
+                <h3>Status</h3>
+
+                <ul class="status__list">
+                  <li>HP: 300</li>
+                  <li>Ataque: 600</li>
+                  <li>Defesa: 500</li>
+                  <li>Velocidade: 200</li>
+                  <li>Total: 1600</li>
+                </ul>
+              </div>
+
+              <div class="skills_container">
+                <h3>Habilidades</h3>
+
+                <ul class="skills__list">
+                  <li>Ataque de água</li>
+                </ul>
+              </div>
+            </section>
+          </div>
+
+          <div class="card" data-pokemon-card-id="5">
+            <header class="card__header">
+              <div class="card__details">
+                <h1>
+                  <strong>Gengar</strong>
+                  <span>#005</span>
+                </h1>
+
+                <mark class="pokemon-type">Trevas</mark>
+              </div>
+
+              <div class="image_wrapper">
+                <img src="./assets/images/gengar.png" alt="Gengar" />
+              </div>
+            </header>
+
+            <section class="card__content">
+              <div class="status_container">
+                <h3>Status</h3>
+
+                <ul class="status__list">
+                  <li>HP: 300</li>
+                  <li>Ataque: 600</li>
+                  <li>Defesa: 500</li>
+                  <li>Velocidade: 200</li>
+                  <li>Total: 1600</li>
+                </ul>
+              </div>
+
+              <div class="skills_container">
+                <h3>Habilidades</h3>
+
+                <ul class="skills__list">
+                  <li>Trevas e escuridão</li>
+                </ul>
+              </div>
+            </section>
+          </div>
+
+          <div class="card" data-pokemon-card-id="6">
+            <header class="card__header">
+              <div class="card__details">
+                <h1>
+                  <strong>Dragonite</strong>
+                  <span>#006</span>
+                </h1>
+
+                <mark class="pokemon-type">Dragão</mark>
+              </div>
+
+              <div class="image_wrapper">
+                <img src="./assets/images/dragonite.png" alt="Dragonite" />
+              </div>
+            </header>
+
+            <section class="card__content">
+              <div class="status_container">
+                <h3>Status</h3>
+
+                <ul class="status__list">
+                  <li>HP: 300</li>
+                  <li>Ataque: 600</li>
+                  <li>Defesa: 500</li>
+                  <li>Velocidade: 200</li>
+                  <li>Total: 1600</li>
+                </ul>
+              </div>
+
+              <div class="skills_container">
+                <h3>Habilidades</h3>
+
+                <ul class="skills__list">
+                  <li>Ataque flamejante</li>
+                </ul>
+              </div>
+            </section>
+          </div>
         </section>
 
-        <nav class="navigation_bar"></nav>
+        <nav class="navigation_bar">
+          <ul class="navigation_list">
+            <li>
+              <button class="pokemon-select" type="button" data-id="1">
+                <img src="assets/images/head-pikachu.png" alt="Head Pikachu" />
+                <span>Pikachu</span>
+              </button>
+            </li>
+
+            <li>
+              <button class="pokemon-select" type="button" data-id="2">
+                <img
+                  src="assets/images/head-bulbasaur.png"
+                  alt="Head bulbasaur"
+                />
+                <span>Bulbasaur</span>
+              </button>
+            </li>
+
+            <li>
+              <button class="pokemon-select" type="button" data-id="3">
+                <img
+                  src="assets/images/head-charmander.png"
+                  alt="Head Charmander"
+                />
+                <span>Charmander</span>
+              </button>
+            </li>
+
+            <li>
+              <button class="pokemon-select" type="button" data-id="4">
+                <img
+                  src="assets/images/head-gyarados.png"
+                  alt="Head Gyarados"
+                />
+                <span>Gyarados</span>
+              </button>
+            </li>
+
+            <li>
+              <button class="pokemon-select" type="button" data-id="5">
+                <img src="assets/images/head-gengar.png" alt="Head Gengar" />
+                <span>Gengar</span>
+              </button>
+            </li>
+
+            <li>
+              <button class="pokemon-select" type="button" data-id="6">
+                <img
+                  src="assets/images/head-dragonite.png"
+                  alt="Head Dragonite"
+                />
+                <span>Dragonite</span>
+              </button>
+            </li>
+          </ul>
+        </nav>
       </main>
     </div>
   </body>
