--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="./assets/icon.png" />
+
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
 
@@ -20,7 +22,7 @@
 
     <script defer src="./scripts/index.js"></script>
 
-    <title>Pokédex</title>
+    <title>Pokédex - Coleção de pokemons favoritos</title>
   </head>
   <body>
     <div class="wrapper">
