--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
 
     <link rel="shortcut icon" href="./assets/icon.png" />
 
     <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/wrapper.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
 
     <link rel="stylesheet" href="./styles/main.css" />
@@ -25,11 +26,11 @@
     <title>Pokédex - Coleção de pokemons favoritos</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="application_wrapper">
       <main class="main_container">
         <section class="cards_container">
           <div class="card" data-pokemon-card-id="1">
-            <header class="card__header">
+            <header class="card__header eletric">
               <div class="card__details">
                 <h1>
                   <strong>Pikachu</strong>
@@ -69,7 +70,7 @@
           </div>
 
           <div class="card" data-pokemon-card-id="2">
-            <header class="card__header">
+            <header class="card__header grass">
               <div class="card__details">
                 <h1>
                   <strong>Bulbasaur</strong>
@@ -109,7 +110,7 @@
           </div>
 
           <div class="card" data-pokemon-card-id="3">
-            <header class="card__header">
+            <header class="card__header fire">
               <div class="card__details">
                 <h1>
                   <strong>Charmander</strong>
@@ -149,7 +150,7 @@
           </div>
 
           <div class="card" data-pokemon-card-id="4">
-            <header class="card__header">
+            <header class="card__header water">
               <div class="card__details">
                 <h1>
                   <strong>Gyarados</strong>
@@ -188,7 +189,7 @@
           </div>
 
           <div class="card" data-pokemon-card-id="5">
-            <header class="card__header">
+            <header class="card__header darkness">
               <div class="card__details">
                 <h1>
                   <strong>Gengar</strong>
@@ -227,7 +228,7 @@
           </div>
 
           <div class="card" data-pokemon-card-id="6">
-            <header class="card__header">
+            <header class="card__header dragon">
               <div class="card__details">
                 <h1>
                   <strong>Dragonite</strong>
