Update index.html file && fix CSS links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <link rel="stylesheet" href="./styles/animations.css" />
 
     <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/media.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
 
     <script defer src="./scripts/index.js"></script>
 
-    <title>Pokédex - Coleção de pokemons favoritos</title>
+    <title>Pokédex - Favoritos</title>
   </head>
   <body>
-    <div class="application_wrapper">
+    <div class="pokedex_wrapper">
       <main class="main_container">
         <section class="cards_container">
           <div class="card" data-pokemon-card-id="1">
