--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="shortcut icon" href="public/assets/icon.png" type="image/png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,16 +14,15 @@
       rel="stylesheet"
     />
 
-    <link rel="shortcut icon" href="./assets/icon.png" />
+    <link rel="stylesheet" href="src/styles/global.css" />
+    <link rel="stylesheet" href="src/styles/wrapper.css" />
+    <link rel="stylesheet" href="src/styles/animations.css" />
 
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/wrapper.css" />
-    <link rel="stylesheet" href="./styles/animations.css" />
+    <link rel="stylesheet" href="src/styles/main.css" />
+    <link rel="stylesheet" href="src/styles/responsive.css" />
 
-    <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="stylesheet" href="./styles/responsive.css" />
-
-    <script defer src="./scripts/index.js"></script>
+    <!-- Load JavaScript code -->
+    <script defer charset="utf-8" src="./src/scripts/index.js"></script>
 
     <title>Pokédex - Favoritos</title>
   </head>
@@ -41,7 +42,7 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/pikachu.png" alt="Pikachu" />
+                <img src="./public/assets/images/pikachu.png" alt="Pikachu" />
               </div>
             </header>
 
@@ -81,7 +82,10 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/bulbasaur.png" alt="Bulbasaur" />
+                <img
+                  src="./public/assets/images/bulbasaur.png"
+                  alt="Bulbasaur"
+                />
               </div>
             </header>
 
@@ -121,7 +125,10 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/charmander.png" alt="Charmander" />
+                <img
+                  src="./public/assets/images/charmander.png"
+                  alt="Charmander"
+                />
               </div>
             </header>
 
@@ -161,7 +168,7 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/gyarados.png" alt="Gyarados" />
+                <img src="./public/assets/images/gyarados.png" alt="Gyarados" />
               </div>
             </header>
 
@@ -200,7 +207,7 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/gengar.png" alt="Gengar" />
+                <img src="./public/assets/images/gengar.png" alt="Gengar" />
               </div>
             </header>
 
@@ -239,7 +246,10 @@
               </div>
 
               <div class="image_wrapper">
-                <img src="./assets/images/dragonite.png" alt="Dragonite" />
+                <img
+                  src="./public/assets/images/dragonite.png"
+                  alt="Dragonite"
+                />
               </div>
             </header>
 
@@ -271,7 +281,10 @@
           <ul class="navigation_list">
             <li>
               <button class="pokemon-select" type="button" data-id="1">
-                <img src="assets/images/head-pikachu.png" alt="Head Pikachu" />
+                <img
+                  src="./public/assets/images/head-pikachu.png"
+                  alt="Head Pikachu"
+                />
                 <span>Pikachu</span>
               </button>
             </li>
@@ -279,7 +292,7 @@
             <li>
               <button class="pokemon-select" type="button" data-id="2">
                 <img
-                  src="assets/images/head-bulbasaur.png"
+                  src="./public/assets/images/head-bulbasaur.png"
                   alt="Head bulbasaur"
                 />
                 <span>Bulbasaur</span>
@@ -289,7 +302,7 @@
             <li>
               <button class="pokemon-select" type="button" data-id="3">
                 <img
-                  src="assets/images/head-charmander.png"
+                  src="./public/assets/images/head-charmander.png"
                   alt="Head Charmander"
                 />
                 <span>Charmander</span>
@@ -299,7 +312,7 @@
             <li>
               <button class="pokemon-select" type="button" data-id="4">
                 <img
-                  src="assets/images/head-gyarados.png"
+                  src="./public/assets/images/head-gyarados.png"
                   alt="Head Gyarados"
                 />
                 <span>Gyarados</span>
@@ -308,7 +321,10 @@
 
             <li>
               <button class="pokemon-select" type="button" data-id="5">
-                <img src="assets/images/head-gengar.png" alt="Head Gengar" />
+                <img
+                  src="./public/assets/images/head-gengar.png"
+                  alt="Head Gengar"
+                />
                 <span>Gengar</span>
               </button>
             </li>
@@ -316,7 +332,7 @@
             <li>
               <button class="pokemon-select" type="button" data-id="6">
                 <img
-                  src="assets/images/head-dragonite.png"
+                  src="./public/assets/images/head-dragonite.png"
                   alt="Head Dragonite"
                 />
                 <span>Dragonite</span>
