--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     />
 
     <link rel="stylesheet" href="src/styles/global.css" />
-    <link rel="stylesheet" href="src/styles/wrapper.css" />
     <link rel="stylesheet" href="src/styles/animations.css" />
 
     <link rel="stylesheet" href="src/styles/main.css" />
     <link rel="stylesheet" href="src/styles/responsive.css" />
 
     <!-- Load JavaScript code -->
-    <script defer charset="utf-8" src="./src/scripts/index.js"></script>
+    <script defer src="./src/scripts/index.js"></script>
 
     <title>Pokédex - Favoritos</title>
   </head>
